Fixed white space at top of navbar

--- a/VandyHacksWebApp/Content/bootstrap.css
+++ b/VandyHacksWebApp/Content/bootstrap.css
@@ -4502,6 +4502,8 @@ input[type="button"].btn-block {
 }
 
 .navbar-dark .navbar-brand {
+    margin-top: 0px;
+    padding-top: 0;
   color: #fff;
 }
 
